--- a/.gitignore
+++ b/.gitignore
@@ -141,3 +141,8 @@ build-iPhoneSimulator/
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
 
 # End of https://www.gitignore.io/api/ruby,code,rails,linux
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
