--- a/config/database.yml
+++ b/config/database.yml
@@ -26,6 +26,7 @@ default: &default
   password: letmepass
   variables:
     statement_timeout: 60000
+  schema_search_path: google_ads,public
 
 development:
   <<: *default
@@ -64,6 +65,7 @@ development:
 test:
   <<: *default
   database: RubyActiveAdmin_test
+  schema_search_path: google_ads,public
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -90,3 +92,4 @@ production:
   username: <%= ENV['RUBYACTIVEADMIN_DATABASE_USER'] %>
   password: <%= ENV['RUBYACTIVEADMIN_DATABASE_PASSWORD'] %>
   host: <%= ENV['RUBYACTIVEADMIN_DATABASE_HOST'] %>
+  schema_search_path: google_ads,public
