--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: A2Z ESPL
+title: A2Z Educational Services Pvt Ltd
 email: support@a2zespl.com
 address: A2ZESPL 78, FIRST FLOOR MANAK VIHAR DELHI - 110092
 company: A2Z Educational Services Pvt Ltd
