--- a/config/database.yml
+++ b/config/database.yml
@@ -26,7 +26,7 @@ default: &default
   password: letmepass
   variables:
     statement_timeout: 60000
-  schema_search_path: google_ads,public
+  schema_search_path: public,google_ads
 
 development:
   <<: *default
@@ -92,4 +92,4 @@ production:
   username: <%= ENV['RUBYACTIVEADMIN_DATABASE_USER'] %>
   password: <%= ENV['RUBYACTIVEADMIN_DATABASE_PASSWORD'] %>
   host: <%= ENV['RUBYACTIVEADMIN_DATABASE_HOST'] %>
-  schema_search_path: google_ads,public
+  schema_search_path: public,google_ads
