--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -51,6 +51,7 @@ deploy-develop:
     - apt update -y
     - apt install -y kubectl
     - mkdir ~/.kube
-    - echo $KUBECONF | base64 --decode > ~/.kube/config
-    - kubectl get pods
+    - echo $KUBECONF | base64 --decode > ~/.kube/config.yaml
+    - cat ~/.kube/config.yaml
+    - kubectl --kubeconfig="~/.kube/config.yaml" get pods
  
