--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,26 +36,51 @@ build-develop:
     # - docker build -t $CI_REGISTRY/learner.in/neetprepadmin:$CI_COMMIT_TAG .
     - docker push $CI_REGISTRY/learner.in/neetprepadmin
 
+# deploy-develop:
+#   only:
+#     - tags
+#     - develop
+#   stage: deploy
+#   cache: {}
+#   image: ubuntu:20.04
+#   script:
+#     - apt update -y
+#     # - snap install doctl
+#     # - mkdir ~/.config
+#     - mkdir ~/.kube
+#     # - export DIGITALOCEAN_ACCESS_TOKEN=$DO_ACCESS
+#     # - doctl kubernetes cluster kubeconfig save np-proxy-cluster
+#     - apt install -y apt-transport-https gnupg2 curl
+#     - curl -s https://packages.cloud.google.com/apt/doc/apt-key.gpg | apt-key add -
+#     - echo "deb https://apt.kubernetes.io/ kubernetes-xenial main" | tee -a /etc/apt/sources.list.d/kubernetes.list
+#     - apt update -y
+#     - apt install -y kubectl
+#     - echo $KUBECONFIG | base64 --decode > ~/.kube/config.yaml
+#     - cat ~/.kube/config.yaml
+#     - kubectl --kubeconfig="~/.kube/config.yaml" get pods
+
 deploy-develop:
   only:
     - tags
     - develop
   stage: deploy
   cache: {}
-  image: ubuntu:20.04
-  script:
-    - apt update -y
-    # - snap install doctl
-    # - mkdir ~/.config
-    - mkdir ~/.kube
-    # - export DIGITALOCEAN_ACCESS_TOKEN=$DO_ACCESS
-    # - doctl kubernetes cluster kubeconfig save np-proxy-cluster
-    - apt install -y apt-transport-https gnupg2 curl
-    - curl -s https://packages.cloud.google.com/apt/doc/apt-key.gpg | apt-key add -
-    - echo "deb https://apt.kubernetes.io/ kubernetes-xenial main" | tee -a /etc/apt/sources.list.d/kubernetes.list
-    - apt update -y
-    - apt install -y kubectl
+  image: aliartiza75/kubectl
+  before_script:
+    - mkdir ~/.kube/
     - echo $KUBECONFIG | base64 --decode > ~/.kube/config.yaml
-    - cat ~/.kube/config.yaml
+  script:
+    # - apt update -y
+    # # - snap install doctl
+    # # - mkdir ~/.config
+    # - mkdir ~/.kube
+    # # - export DIGITALOCEAN_ACCESS_TOKEN=$DO_ACCESS
+    # # - doctl kubernetes cluster kubeconfig save np-proxy-cluster
+    # - apt install -y apt-transport-https gnupg2 curl
+    # - curl -s https://packages.cloud.google.com/apt/doc/apt-key.gpg | apt-key add -
+    # - echo "deb https://apt.kubernetes.io/ kubernetes-xenial main" | tee -a /etc/apt/sources.list.d/kubernetes.list
+    # - apt update -y
+    # - apt install -y kubectl
+    # - echo $KUBECONFIG | base64 --decode > ~/.kube/config.yaml
+    # - cat ~/.kube/config.yaml
     - kubectl get pods
- 
