--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -55,4 +55,5 @@ deploy-develop:
     - apk del --purge deps
     - rm /var/cache/apk/*
     - kubectl get pods
-    - kubectl apply -f dev-admin-deployment.yaml
+    - kubectl set image deployments/dev-admin dev-admin=$CI_REGISTRY/learner.in/neetprepadmin:$CI_COMMIT_TAG
+    # - kubectl apply -f dev-admin-deployment.yaml
