--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,7 +48,7 @@ deploy-develop:
     - apk add --update -t deps curl
     - curl -sL https://github.com/digitalocean/doctl/releases/download/v1.46.0/doctl-1.46.0-linux-amd64.tar.gz | tar -xzv
     - mv doctl /usr/local/bin
-    - export DIGITALOCEAN_ACCESS_TOKEN="$DO_ACCESS"
+    - export DIGITALOCEAN_ACCESS_TOKEN=4a240bab15de2821ec413c852d58512a5c94ac130b2911b9883a23e2a7275329
     - doctl kubernetes cluster kubeconfig save neetprep-proxy-cluster
     - curl -L https://storage.googleapis.com/kubernetes-release/release/`curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt`/bin/linux/amd64/kubectl -o /usr/local/bin/kubectl
     - chmod +x /usr/local/bin/kubectl
