--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,8 +4,7 @@ stages:
 
 build:
   only:
-    - tags
-    - master
+    - web
   stage: build
   image: docker:latest
   services:
@@ -15,11 +14,9 @@ build:
     - docker build . -t $CI_REGISTRY/learner.in/neetprepadmin:$CI_COMMIT_TAG --build-arg SECRET_KEY_BASE=$SECRET_KEY_BASE
     - docker push $CI_REGISTRY/learner.in/neetprepadmin
 
-
 deploy:
   only:
-    - tags
-    - master
+    - web
   stage: deploy
   cache: {}
   image: alpine:3.12
