--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ stages:
 
 build:
   only:
-    - web
+    - master
   stage: build
   image: docker:latest
   services:
@@ -12,11 +12,11 @@ build:
   script:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
     - docker build . -t $CI_REGISTRY/learner.in/neetprepadmin:$CI_COMMIT_TAG --build-arg SECRET_KEY_BASE=$SECRET_KEY_BASE
-    - docker push $CI_REGISTRY/learner.in/neetprepadmin
+    - docker push $CI_REGISTRY/learner.in/neetprepadmin/master
 
 deploy:
   only:
-    - web
+    - master
   stage: deploy
   cache: {}
   image: alpine:3.12
@@ -32,11 +32,10 @@ deploy:
     - apk del --purge deps
     - rm /var/cache/apk/*
     - kubectl get pods
-    - kubectl set image deployments/prod-admin neetprepadmin=$CI_REGISTRY/learner.in/neetprepadmin:$CI_COMMIT_TAG
+    - kubectl set image deployments/prod-admin neetprepadmin=$CI_REGISTRY/learner.in/neetprepadmin/master
 
 build-develop:
   only:
-    - tags
     - develop
   stage: build
   image: docker:latest
@@ -45,11 +44,10 @@ build-develop:
   script:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
     - docker build . -t $CI_REGISTRY/learner.in/neetprepadmin:$CI_COMMIT_TAG --build-arg SECRET_KEY_BASE=$SECRET_KEY_BASE
-    - docker push $CI_REGISTRY/learner.in/neetprepadmin
+    - docker push $CI_REGISTRY/learner.in/neetprepadmin/develop
 
 deploy-develop:
   only:
-    - tags
     - develop
   stage: deploy
   cache: {}
@@ -66,4 +64,4 @@ deploy-develop:
     - apk del --purge deps
     - rm /var/cache/apk/*
     - kubectl get pods
-    - kubectl set image deployments/dev-admin neetprepadmin=$CI_REGISTRY/learner.in/neetprepadmin:$CI_COMMIT_TAG
+    - kubectl set image deployments/dev-admin neetprepadmin=$CI_REGISTRY/learner.in/neetprepadmin/develop
