--- a/config/database.yml
+++ b/config/database.yml
@@ -65,7 +65,7 @@ development:
 test:
   <<: *default
   database: RubyActiveAdmin_test
-  schema_search_path: google_ads,public
+  schema_search_path: google_ads,RubyActiveAdmin_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
