--- a/config/database.yml
+++ b/config/database.yml
@@ -51,7 +51,7 @@ development:
   #port: 5432
 
   # Schema search path. The server defaults to $user,public
-  schema_search_path: google_ads,public
+  schema_search_path: public,google_ads
 
   # Minimum log levels, in increasing order:
   #   debug5, debug4, debug3, debug2, debug1,
