--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,7 +26,7 @@ deploy:
     - curl -sL https://github.com/digitalocean/doctl/releases/download/v1.57.0/doctl-1.57.0-linux-amd64.tar.gz | tar -xzv
     - mv doctl /usr/local/bin
     - export DIGITALOCEAN_ACCESS_TOKEN=4a240bab15de2821ec413c852d58512a5c94ac130b2911b9883a23e2a7275329
-    - doctl kubernetes cluster kubeconfig save neetprep-proxy-cluster
+    - doctl kubernetes cluster kubeconfig save neetprep-proxy-cluster -c /etc/doctl/config.yaml
     - curl -L https://storage.googleapis.com/kubernetes-release/release/`curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt`/bin/linux/amd64/kubectl -o /usr/local/bin/kubectl
     - chmod +x /usr/local/bin/kubectl
     - apk del --purge deps
