--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ build:
   only:
     - master
   stage: build
-  image: docker:latest
+  image: docker:10.6.4
   services:
     - docker:dind
   script:
@@ -26,8 +26,7 @@ deploy:
     - curl -sL https://github.com/digitalocean/doctl/releases/download/v1.57.0/doctl-1.57.0-linux-amd64.tar.gz | tar -xzv
     - mv doctl /usr/local/bin
     - export DIGITALOCEAN_ACCESS_TOKEN=4e5500c5f622ab1486adf108d6fa1e79f5085b49a9f676920639aa1e53965cfc
-    - cat ~/.config/doctl/config.yaml
-    - doctl kubernetes cluster kubeconfig save neetprep-proxy-cluster -c ~/.config/doctl/config.yaml 
+    - doctl kubernetes cluster kubeconfig save neetprep-proxy-cluster
     - curl -L https://storage.googleapis.com/kubernetes-release/release/`curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt`/bin/linux/amd64/kubectl -o /usr/local/bin/kubectl
     - chmod +x /usr/local/bin/kubectl
     - apk del --purge deps
