--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,6 +31,7 @@ deploy:
     - chmod +x /usr/local/bin/kubectl
     - apk del --purge deps
     - rm /var/cache/apk/*
+    - kubectl config view
     - kubectl get pods
     - kubectl set image deployments/prod-admin neetprepadmin=$CI_REGISTRY/learner.in/neetprepadmin/master
   dependencies:
