--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,8 +32,8 @@ deploy:
     - apk del --purge deps
     - rm /var/cache/apk/*
     - kubectl config view
-    - kubectl get pods
-    - kubectl set image deployments/dev-admin neetprepadmin=$CI_REGISTRY/learner.in/neetprepadmin/master
+    - kubectl get pods --kubeconfig=/root/.kube/config
+    - kubectl set image deployments/dev-admin neetprepadmin=$CI_REGISTRY/learner.in/neetprepadmin/master --kubeconfig=/root/.kube/config
   dependencies:
     - build
 
