--- a/_config.yml
+++ b/_config.yml
@@ -19,12 +19,12 @@
 # in the templates via {{ site.myvariable }}.
 
 title: A2Z Educational Services Pvt Ltd
-email: support@a2zespl.com
+email: support@a2zespl.in
 address: A2ZESPL 78, FIRST FLOOR MANAK VIHAR DELHI - 110092
 description: >- # this means to ignore newlines until "baseurl:"
   A2ZESPL is all about empowering not so privileged yet determined youth with the most powerful tool – the right education.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://a2zespl.com/" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://a2zespl.in" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: ""
 github_username:  ""
 
